--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>vchat - a simple video chat app</title>
+  <title>meething sfu test</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
@@ -12,11 +12,6 @@
 
 <body>
   <div class="container">
-    <header>
-      <h1><a href="/">vchat</a></h1>
-      <h2><a href="/">a simple video chat app</a></h2>
-    </header>
-
     <div class="row">
       <div class="col"></div>
       <div class="col-md-auto align-self-center">
@@ -40,8 +35,6 @@
   </div>
 
   <footer>
-    <p>Hacked together by <a href="https://twitter.com/rdegges">@rdegges</a>
-      and <a href="https://twitter.com/oktadev">@oktadev</a>.</p>
   </footer>
 
   <script type="module">
