--- a/static/index.html
+++ b/static/index.html
@@ -15,11 +15,12 @@
     <div class="row">
       <div class="col"></div>
       <div class="col-md-auto align-self-center">
-        <div id="url" class="alert alert-dark" role="alert">
-          <span id="roomIntro">ROOM URL</span><span id="roomUrl"></span>
-        </div>
-        <button id="start_button" type="button" disabled=true class="btn btn-success btn-lg btn-block">Start
+         <button id="start_button" type="button" disabled=true class="btn btn-success btn-lg btn-block">Start
           Meething</button>
+       <!-- <div id="url" class="alert alert-dark" role="alert">
+          <span id="roomIntro">ROOM URL</span><span id="roomUrl"></span> -->
+        </div>
+       
       </div>
       <div class="col"></div>
     </div>
