--- a/static/index.html
+++ b/static/index.html
@@ -17,8 +17,8 @@
       <div class="col-md-auto align-self-center">
          <button id="start_button" type="button" disabled=true class="btn btn-success btn-lg btn-block">Start
           Meething</button>
-       <!-- <div id="url" class="alert alert-dark" role="alert">
-          <span id="roomIntro">ROOM URL</span><span id="roomUrl"></span> -->
+         <div id="url" class="alert alert-dark" role="alert">
+          <span id="roomIntro">ROOM URL</span><span id="roomUrl"></span>
         </div>
        
       </div>
