--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="col-md-4">
         <div class="videoContainer">
           <video id="selfVideo" oncontextmenu="return false;"></video>
-          <meter id="localVolume" class="volume" min="-45" max="-20" high="-25" low="-40"></meter>
+          <!--meter id="localVolume" class="volume" min="-45" max="-20" high="-25" low="-40"></meter-->
         </div>
       </div>
     </div>
